CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(TestModule CXX Fortran C)

LOAD_CACHE(../)
IF(NOT ENABLE_MPI)
  ADD_DEFINITIONS( -DDUMMY_MPI )
ELSE()
  FIND_PACKAGE(MPI REQUIRED)
  ADD_DEFINITIONS( -DMPICH_IGNORE_CXX_SEEK )
ENDIF()

FIND_PATH(COM_INC roccom.h HINTS ../COM/include)
FIND_PATH(SimIN_INC HDF4.h HINTS ../SimIO/In/include)

SET (LIB_SRCS src/TestModule.C)
SET (LIB_SRCSF src/TestFortranModule.f90)
SET (UTIL_SRCS src/TestModuleDriver.C src/TestModuleDriver.f90)
SET (ALL_SRCS ${LIB_SRCS} ${LIB_SRCSF} ${UTIL_SRCS})

SET_SOURCE_FILES_PROPERTIES(${ALL_SRCS} PROPERTIES COMPILE_FLAGS "-fPIC" )
#set(TEST_SRCS src/MANTest.C)

# rpath settings
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE_DIRECTORIES(include ${COM_INC} ${SimIN_INC} ${CMAKE_BINARY_DIR}/include)

IF(NOT BUILD_STATIC AND UNIX)
  ADD_LIBRARY(TestModule SHARED ${LIB_SRCS})
  ADD_LIBRARY(TestFortranModule SHARED ${LIB_SRCSF})
ELSE()
  ADD_LIBRARY(TestModule STATIC ${LIB_SRCS})
  ADD_LIBRARY(TestFortranModule STATIC ${LIB_SRCSF})
  ADD_DEFINITIONS( -DSTATIC_LINK )
ENDIF()

TARGET_LINK_LIBRARIES(TestModule SITCOM SITCOMF)

IF (UNIX)
	TARGET_LINK_LIBRARIES(TestFortranModule SITCOM SITCOMF)
ELSE ()
	TARGET_LINK_LIBRARIES(TestFortranModule SITCOM SITCOMF SITCOMF2)
ENDIF()

ADD_EXECUTABLE(TestModuleDriver src/TestModuleDriver.C)
TARGET_LINK_LIBRARIES(TestModuleDriver TestModule TestFortranModule)

ADD_EXECUTABLE(TestModuleDriverF src/TestModuleDriver.f90)
SET_TARGET_PROPERTIES(TestModuleDriverF PROPERTIES LINKER_LANGUAGE Fortran)
TARGET_LINK_LIBRARIES(TestModuleDriverF TestModule TestFortranModule)

INSTALL(TARGETS TestModule TestFortranModule TestModuleDriver RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(TARGETS TestModule TestFortranModule TestModuleDriverF RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)