CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(SimIO)
SET (BUILD_STATIC FALSE CACHE BOOL "Build static libraries")
SET (ENABLE_MPI TRUE CACHE BOOL "Build with MPI Support")

SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all executables.")
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "Single directory for all libraries and archives.")
MARK_AS_ADVANCED (LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
IF(NOT ENABLE_MPI)
  ADD_DEFINITIONS( -DDUMMY_MPI )
ELSE()
  FIND_PACKAGE(MPI REQUIRED)
  ADD_DEFINITIONS( -DMPICH_IGNORE_CXX_SEEK )
  INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF()


ADD_SUBDIRECTORY(In)
ADD_SUBDIRECTORY(Out)

INCLUDE_DIRECTORIES(../COM/include ./In/include ./Out/include ${CMAKE_BINARY_DIR}/include)

#INSTALL(TARGETS rocstar RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
