cmake_minimum_required (VERSION 2.8)
PROJECT(Simpal)
#ENABLE_LANGUAGE( CXX Fortran )
#include(FortranCInterface)
#FortranCInterface_HEADER(${PROJECT_SOURCE_DIR}/include/FC.h MACRO_NAMESPACE "FC_")
#FortranCInterface_VERIFY(CXX QUIET)
#set (BUILD_STATIC FALSE CACHE BOOL "Build static COM library")
#set (ENABLE_MPI TRUE CACHE BOOL "Build with MPI Support")
#set (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all executables.")
#set (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib CACHE PATH "Single directory for all libraries and archives.")
#mark_as_advanced (LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
LOAD_CACHE(../)
IF(NOT ENABLE_MPI)
  ADD_DEFINITIONS( -DDUMMY_MPI )
ELSE()
  FIND_PACKAGE(MPI REQUIRED)
  ADD_DEFINITIONS( -DMPICH_IGNORE_CXX_SEEK )
  INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF()

#INCLUDE(CTest)

FIND_LIBRARY(DL_LIB dl)
FIND_PATH(COM_INC roccom.h HINT ../COM/include)

SET (BLASLIB_SRCS src/Rocblas.C src/axpy.C src/dots.C src/op2args.C src/op3args.C)
SET (ALL_BLAS_SRCS "${BLASLIB_SRCS}")
SET (TEST_SRCS test/blastest.C)
SET_SOURCE_FILES_PROPERTIES(${ALL_BLAS_SRCS} ${TEST_SRCS} PROPERTIES COMPILE_FLAGS "-fPIC ${MPI_CXX_COMPILE_FLAGS}" )
#set(TEST_SRCS src/COMTest.C)

# rpath settings
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE_DIRECTORIES(include ${CMAKE_BINARY_DIR}/include ${COM_INC})

IF(NOT BUILD_STATIC AND UNIX)
  ADD_LIBRARY(Simpal SHARED ${BLASLIB_SRCS})
ELSE()
  ADD_LIBRARY(Simpal STATIC ${BLASLIB_SRCS})
  ADD_DEFINITIONS( -DSTATIC_LINK )
ENDIF()
TARGET_LINK_LIBRARIES(Simpal SITCOM ${MPI_CXX_LIBRARIES})
SET_TARGET_PROPERTIES(Simpal PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
ADD_EXECUTABLE(blastest ${TEST_SRCS})
TARGET_LINK_LIBRARIES(blastest Simpal ${MPI_CXX_LIBRARIES})
SET_TARGET_PROPERTIES(blastest PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")

#ADD_TEST(RunAllTests ${EXECUTABLE_OUTPUT_PATH}/testx testresults.txt)
#ADD_TEST(TestObject:ValidHandle ${TEST_RESULTS} TestObject:ValidHandle testresults.txt)
#ADD_TEST(TestObject:Exists ${TEST_RESULTS} TestObject:Exists testresults.txt)

INSTALL(TARGETS Simpal RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
